Update player container header height and add icons to timeline items

--- a/index.html
+++ b/index.html
@@ -91,12 +91,13 @@
         </style>
     </head>
     <body>
+        
     <!-- QT HEADER END ================================ -->
     <div class="qt-parentcontainer">        
 		<!-- PLAYER ========================= -->
 		<div id="qtplayercontainer" data-playervolume="true" data-accentcolor="#dd0e34" data-accentcolordark="#ff0442" data-textcolor="#ffffff" data-soundmanagerurl="./components/soundmanager/swf/" class="qt-playercontainer qt-playervolume qt-clearfix qt-content-primary">
 			<div class="qt-playercontainer-content qt-vertical-padding-m">
-				<div class="qt-playercontainer-header">
+				<div class="qt-playercontainer-header" style="height: 120px;">
 					<h5 class="qt-text-shadow small">Now On</h5>
 					<h3 id="qtradiotitle" class="qt-text-shadow">MESETA 1</h3>
 					<h4 id="qtradiosubtitle" class="qt-thin qt-text-shadow small">Rock & Pop</h4>
@@ -164,7 +165,7 @@
                                 <div class="qt-timeline-desc">Tuesday<br>Morning Jazz<br><strong>Chuco</strong></div>
                             </div>
                             <div class="qt-timeline-item" data-day="3">
-                                <div class="qt-timeline-icon">🎤</div>
+                                <div class="qt-timeline-icon" id="michophone">&#x1F3A4;</div>
                                 <div class="qt-timeline-time">12:00 - 14:00</div>
                                 <div class="qt-timeline-desc">Wednesday<br>Pop Hits<br><strong>Chuco</strong></div>
                             </div>
@@ -174,7 +175,7 @@
                                 <div class="qt-timeline-desc">Thursday<br>Country Roads<br><strong>Chuco</strong></div>
                             </div>
                             <div class="qt-timeline-item" data-day="5">
-                                <div class="qt-timeline-icon">🎧</div>
+                                <div class="qt-timeline-icon" id="headphone">&#x1F3A7;</div>
                                 <div class="qt-timeline-time">16:00 - 18:00</div>
                                 <div class="qt-timeline-desc">Friday<br>Dance Party<br><strong>Chuco</strong></div>
                             </div>
@@ -210,7 +211,7 @@
                                 <div class="qt-timeline-desc">Tuesday<br>Morning Jazz</div>
                             </div>
                             <div class="qt-timeline-item" data-day="3">
-                                <div class="qt-timeline-icon">🎤</div>
+                                <div class="qt-timeline-icon" id="michophone">&#x1F3A4;</div>
                                 <div class="qt-timeline-time">12:00 - 14:00</div>
                                 <div class="qt-timeline-desc">Wednesday<br>Pop Hits</div>
                             </div>
@@ -220,7 +221,7 @@
                                 <div class="qt-timeline-desc">Thursday<br>Country Roads</div>
                             </div>
                             <div class="qt-timeline-item" data-day="5">
-                                <div class="qt-timeline-icon">🎧</div>
+                                <div class="qt-timeline-icon" id="headphone">&#x1F3A7;</div>
                                 <div class="qt-timeline-time">16:00 - 18:00</div>
                                 <div class="qt-timeline-desc">Friday<br>Dance Party</div>
                             </div>
@@ -245,7 +246,7 @@
                                 <div class="qt-timeline-desc">Tuesday<br>Morning Jazz</div>
                             </div>
                             <div class="qt-timeline-item" data-day="3">
-                                <div class="qt-timeline-icon">🎤</div>
+                                <div class="qt-timeline-icon" id="michophone">&#x1F3A4;</div>
                                 <div class="qt-timeline-time">12:00 - 14:00</div>
                                 <div class="qt-timeline-desc">Wednesday<br>Pop Hits</div>
                             </div>
@@ -255,7 +256,7 @@
                                 <div class="qt-timeline-desc">Thursday<br>Country Roads</div>
                             </div>
                             <div class="qt-timeline-item" data-day="5">
-                                <div class="qt-timeline-icon">🎧</div>
+                                <div class="qt-timeline-icon" id="headphone">&#x1F3A7;</div>
                                 <div class="qt-timeline-time">16:00 - 18:00</div>
                                 <div class="qt-timeline-desc">Friday<br>Dance Party</div>
                             </div>
