--- a/teste1.html
+++ b/teste1.html
@@ -522,7 +522,7 @@
         <!-- SCRIPTS FOR BACKGROUND IMAGE ================================ -->
         <script src="js/background-image.js"></script>
 
-        <script src="js/pause-play.js"></script>
+        <script src="js/pause-play2.js"></script>
 
     </body>
 </html>
