Update background image and pause-play functionality for audio player

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </a>
                 </li>
                 <li class="qt-channel">
-                    <a href="#!" class="qt-ellipsis" data-title="MESETA 2" data-subtitle="Folk - Perú" data-background="imagestemplate/bamboo-flute-2897460_1280.jpg" data-logo="" data-playtrack="http://stream.zeno.fm/7ux5x5c3k0hvv" data-host="173.192.105.231" data-port="3540" data-stats_path="" data-played_path="" data-channel="">
+                    <a href="#!" class="qt-ellipsis" data-title="MESETA 2" data-subtitle="Folk - Perú" data-background="imagestemplate/meseta2folk.png" data-logo="" data-playtrack="http://stream.zeno.fm/7ux5x5c3k0hvv" data-host="173.192.105.231" data-port="3540" data-stats_path="" data-played_path="" data-channel="">
                         <img src="imagestemplate/bamboo-flute-2897460_1280.jpg" alt="logo" class="qt-radiologo" width="80" height="80">
                         <i class="dripicons-media-play"></i> MESETA 2 - Folk - Perú
                     </a>
@@ -506,21 +506,23 @@
         <!-- Popup -->
         <script src="components/popup/popup.js"></script>
 
-        <!-- MAIN JAVASCRIPT FILE ================================ -->
+        <!-- MAIN JAVASCRIPT FILE -->
         <script src="js/qt-main.js"></script>
 
-        <!-- CHAT BUTTON SCRIPTS ================================ -->
+        <!-- CHAT BUTTON SCRIPTS -->
         <script>window['CboxReady'] = function (Cbox) {Cbox('button', '3-3538038-zlWtWH');}</script>
         <script src="https://static.cbox.ws/embed/2.js" async></script>
 
         <!-- Script for social media icons -->
         <script src="https://kit.fontawesome.com/4ab08ea2b2.js" crossorigin="anonymous"></script>
 
-        <!-- SCRIPTS FOR SCHEDULE ================================ -->
+        <!-- SCRIPTS FOR SCHEDULE -->
         <script src="js/schedule.js"></script>
         
-        <!-- SCRIPTS FOR BACKGROUND IMAGE ================================ -->
+        <!-- SCRIPTS FOR BACKGROUND IMAGE -->
         <script src="js/background-image.js"></script>
 
+        <!-- SCRIPTS FOR PAUSE PLAY BUTTON --> 
+        <script src="js/pause-play.js"></script>
     </body>
 </html>
