Update schedule styling and add timezone information to channel titles

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!-- CHANNELS LIST END ============================ -->
     <!-- SCHEDULE MESETA 1 ============================ -->
                 <li class="qt-channel">
-                    <h3 id="qtradiotitle" class="qt-text-shadow qt-schedule-title">MESETA 1 - Current/ Schedule</h3><br>
+                    <h3 id="qtradiotitle" class="qt-text-shadow qt-schedule-title">MESETA 1 - Current/ Schedule (UTC-05:00)</h3><br>
                         <ul>
                             <!-- Monday -->
                             <li class="qt-day">
@@ -318,7 +318,15 @@
                                         <div class="qt-timeline-desc">Rock 80's 90's 00's<br><i class="fa-sharp fa-solid fa-music"></i></div>
                                     </div>
                                     <div class="qt-timeline-item qt-hidden" data-day="6">
-                                        <div class="qt-timeline-time">12:00 - 18:00</div>
+                                        <div class="qt-timeline-time">12:00 - 14:00</div>
+                                        <div class="qt-timeline-desc">Rock 00's<br><i class="fa-sharp fa-solid fa-music"></i></div>
+                                    </div>
+                                    <div class="qt-timeline-item qt-hidden" data-day="6">
+                                        <div class="qt-timeline-time">14:00 - 15:00</div>
+                                        <div class="qt-timeline-desc">Cultura e Diversidade Musical<br><i class="fa-solid fa-microphone-lines"></i><i> DJ: Stanpapy</i></div>
+                                    </div>
+                                    <div class="qt-timeline-item qt-hidden" data-day="6">
+                                        <div class="qt-timeline-time">15:00 - 18:00</div>
                                         <div class="qt-timeline-desc">Rock 00's<br><i class="fa-sharp fa-solid fa-music"></i></div>
                                     </div>
                                     <div class="qt-timeline-item qt-hidden" data-day="6">
@@ -368,7 +376,7 @@
     <!-- SCHEDULE MESETA 1 END ======================== -->
     <!-- SCHEDULE MESETA 2 ============================ -->
                 <li class="qt-channel">
-                    <h3 id="qtradiotitle" class="qt-text-shadow qt-schedule-title">MESETA 2 - Current / Schedule</h3><br>
+                    <h3 id="qtradiotitle" class="qt-text-shadow qt-schedule-title">MESETA 2 - Current / Schedule (UTC-05:00)</h3><br>
                         <ul>
                             <!-- Monday -->
                             <li class="qt-day">
@@ -429,7 +437,15 @@
                                 <h4 id="qtradiosubtitle" class="qt-thin qt-text-shadow small qt-schedule-title">Saturday</h4>
                                 <div class="qt-timeline">
                                     <div class="qt-timeline-item qt-hidden" data-day="6">
-                                        <div class="qt-timeline-time">05:00 - 18:00</div>
+                                        <div class="qt-timeline-time">05:00 - 14:00</div>
+                                        <div class="qt-timeline-desc">Folk Perú<br><i class="fa-sharp fa-solid fa-music"></i></div>
+                                    </div>
+                                    <div class="qt-timeline-item qt-hidden" data-day="6">
+                                        <div class="qt-timeline-time">14:00 - 15:00</div>
+                                        <div class="qt-timeline-desc">Cultura e Diversidade Musical<br><i class="fa-solid fa-microphone-lines"></i><i> DJ: Stanpapy</i></div>
+                                    </div>
+                                    <div class="qt-timeline-item qt-hidden" data-day="6">
+                                        <div class="qt-timeline-time">15:00 - 18:00</div>
                                         <div class="qt-timeline-desc">Folk Perú<br><i class="fa-sharp fa-solid fa-music"></i></div>
                                     </div>
                                     <div class="qt-timeline-item qt-hidden" data-day="6">
